@@ -2,6 +2,10 @@ Sun Feb 28 23:03:00 2010 Damien Churchill <damoxc@gmail.com>
 	* setup.py:
 		+ bugfix: include hack faking that pyrex is installed to workaround
 		          a bug in setuptools.
+	* _mssql.pyx:
+		+ bugfix: add support for connecting using "." and "(local)"
+	* sqlfront.pxd:
+		+ feature: tidy up and remove all unused methods.
 	* version 1.9.906
 
 Mon Nov 23 13:37:00 2009 Damien Churchill <damoxc@gmail.com>
